[metadata]
name = badfish
version = 1.0.2
author = Gonzalo Rafuls
author_email = gonza@redhat.com
description = Badfish is a Redfish-based API tool for managing bare-metal systems via the Redfish API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redhat-performance/badfish
project_urls =
    Bug Tracker = https://github.com/redhat-performance/badfish/issues
    Documentation = https://github.com/redhat-performance/badfish/blob/master/README.md
    Source Code = https://github.com/redhat-performance/badfish
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
