[metadata]
name = badfish
author = Gonzalo Rafuls
author_email = gonza@redhat.com
description = Badfish is a Redfish-based API tool for managing bare-metal systems via the Redfish API
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
platforms = any
url = https://github.com/redhat-performance/badfish
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
keywords = oob, management
project_urls =
    Bug Tracker = https://github.com/redhat-performance/badfish/issues
    Documentation = https://github.com/redhat-performance/badfish/blob/master/README.md
    Source Code = https://github.com/redhat-performance/badfish

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pyyaml>=3.10
    aiohttp>=3.7.4
    setuptools>=39.0
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[sdist]
formats = gztar

[options.entry_points]
console_scripts =
    badfish = badfish.main:main
